product and stock with vertx http server